feat: 연결 요청용 DTO 생성